Bug 1408397 - FileReader should not use a bufferStream together with an async inputStream, r=smaug